--- a/package.json
+++ b/package.json
@@ -6,10 +6,22 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@bogeychan/elysia-logger": "^0.1.10",
+    "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/openapi": "^1.4.11",
+    "@prisma/client": "^6.18.0",
+    "elysia": "latest",
+    "elysia-healthcheck": "^1.0.0",
+    "elysiajs-helmet": "^1.0.2",
+    "logixlysia": "^5.3.0",
+    "prismabox": "^1.1.25"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/semver": "^7.7.1",
+    "bun-types": "latest",
+    "prisma": "^6.18.0",
+    "semver": "^7.7.3"
   },
-  "module": "src/index.js"
+  "module": "src/index.js",
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
