--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hot-updater-storemode",
+  "name": "hot-updater-custom-server",
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,6 +22,5 @@
     "prisma": "^6.18.0",
     "semver": "^7.7.3"
   },
-  "module": "src/index.js",
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "module": "src/index.js"
 }
